# webapp-template

./: .pre-commit-config.yaml  Dockerfile  README.md
src/: main.py  models.py  pyproject.toml  requirements.txt  test_main.py
